@@ -1,4 +1,5 @@
-8.25/16 - 0.8.0 - Added preliminary music with Headphones support, plus numerous minor changes.
+1/28/16 - 0.8.1 - Added Slack support for notifications, fix for Pushbullet, other minor changes.
+8/25/16 - 0.8.0 - Added preliminary music with Headphones support, plus numerous minor changes.
 3/15/16 - 0.7.5 - Added ability to toggle between alternative input menu and default device (use if menus options don't appear)
 3/14/16 - 0.7.4 - Added ability to manage CouchPotato in channel
 3/09/16 - 0.7.3 - Added Dutch translation by Ruvetuve
